--- a/app/dashboard/templates/dashboard/top_cards_w_graph.html
+++ b/app/dashboard/templates/dashboard/top_cards_w_graph.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load svg_icons %}
+{% load currency %}
 <div class="col-sm-6 col-lg-3">
     <div class="card">
         <div class="card-body">
@@ -10,7 +11,12 @@
                 </div>
             </div>
             <div class="d-flex align-items-baseline">
+                {% if ctx.count %}
                 <div class="h1 mb-3 me-2">{{ctx.count}}</div>
+                {% endif %}
+                {% if ctx.money %}
+                <div class="h1 mb-3 me-2">{{ctx.money|currency}}</div>
+                {% endif %}
                 {% if ctx.icon %}
                 <div class="me-auto">
                     <span class="{{ctx.icon_class}} d-inline-flex align-items-center lh-1">
